# marketing-brain

./: .dockerignore  .env.example  .env.local.example  .gitignore  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  tailwind.config.ts  tsconfig.json
app/: config.py  globals.css  layout.tsx  page.tsx
app/agents/: __init__.py  analyst.py  base.py  creative.py  judge.py  skeptic.py  strategist.py
app/api/advise/: route.ts
app/api/anam-token/: route.ts
app/api/discuss/: route.ts
app/api/health/: route.ts
app/berater/: page.tsx
app/brains/: __init__.py  lobes.py
app/deliberation/: __init__.py  loop.py  schemas.py
app/llm/: __init__.py  anthropic_client.py  client.py
components/: AdvisorOrb.tsx  Conclusion.tsx  Discussion.tsx  FollowUpForm.tsx  HeadAvatar.tsx  HeadsSection.tsx  InputForm.tsx  MessageBubble.tsx  VideoAdvisor.tsx
data/indexes/: crisis.md  influencer.md  marketing.md  social_media.md  storytelling.md
lib/: advisor-prompt.ts  anam.ts  attachments.ts  brain-prompt.ts  heads.ts  heygen.ts  parser.ts  segments.ts  types.ts
louis-hermes/: HANDOVER.md  index.html  package-lock.json  package.json
louis-hermes-v2/: README.md  package-lock.json  package.json  vite.config.ts
louis-hermes-v2/src/: App.tsx  styles.css
louis-hermes/src/: App.tsx  styles.css
src/marketing_brain/: __init__.py  catalog.py  cli.py  engine.py  parser.py  prompts.py  router.py  server.py
tests/: test_parser.py  test_router.py
web/: index.html
(+69 files in other folders)
